--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A node http server designed to isomorphically server willow components.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --recursive --reporter spec --fgrep ./unit --compilers jsx:babel/register,js:babel/register ./test/unit"
+    "test": "./node_modules/mocha/bin/mocha --recursive --reporter spec --compilers jsx:babel/register,js:babel/register test/setup.js test/unit/**"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "chai": "^3.0.0",
     "jsdom": "^3.1.2",
     "mocha": "^2.2.5",
+    "request": "^2.58.0",
     "sinon": "^1.15.3"
   }
 }
