Add more tests. Move some logic from the server to the component

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
     "underscore-deep-extend": "0.0.5",
+    "willow-component": "willowjs/willow-component",
     "willow-error": "willowjs/willow-error"
   },
   "devDependencies": {
