--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "async": "^1.3.0",
     "express": "^4.13.0",
+    "express-handlebars": "^2.0.1",
     "lodash": "^3.10.0",
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
